--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,9 @@
 {
   "short_name": "GNZ Training Program",
   "name": "GNZ Training Program Sample",
-  "icons": [],
+  "icons": [
+    { "src": "images/GNZ_logo.png", "type": "image/png", "sizes": "192x192" }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
